production/percona-cstor/percona-cstor-backend.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: percona-cstor-backend
  namespace: percona-cstor
spec:
  selector:
    matchLabels:
      app: percona-cstor-backend
  template:
    metadata:
      labels:
        app: percona-cstor-backend
    spec:
      serviceAccountName: percona-cstor-operator
      containers:
      - name: percona-cstor-backend-container
        ports:
        - containerPort: 3000
        args:
        - "percona-mysql"
        - "k8sDem0"
        - "percona-jiva"
        - "openebs"
        - "maya-apiserver-service.openebs"
        image: inyee/percona-cstor-mysql:master-e115d71
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: percona-cstor
  labels:
    app: percona-cstor-backend
  name: percona-cstor-backend-service
spec:
  ports:
  - name: percona-cstor-backend
    port: 3000
    protocol: TCP
  selector:
    app: percona-cstor-backend
