production/percona-cstor/percona-openebs-deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: percona
  namespace: percona-cstor	
  labels:
    name: percona
    type: workload
spec:
  replicas: 1
  selector: 
    matchLabels:
      name: percona 
  template: 
    metadata:
      labels: 
        name: percona
        type: workload
    spec:
      tolerations:
      - key: "ak"
        value: "av"
        operator: "Equal"
        effect: "NoSchedule"
      containers:
        - resources:
            limits:
              cpu: 0.5
          name: percona
          image: percona:latest
          args:
            - "--ignore-db-dir"
            - "lost+found"
          ports:
            - containerPort: 3306
              name: percona
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: demo-vol1
      volumes:
        - name: demo-vol1
          persistentVolumeClaim:
            claimName: demo-vol1-claim
---
apiVersion: v1
kind: Service
metadata:
  name: percona-mysql
  namespace: percona-cstor
  labels:
    name: percona-mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
      name: percona
